# web_app_fastapi

./: README.md  alembic.ini  database.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 103e44d400b0_in.py  5ab50dd5b5b1_test.py  9d531d9a8f9a_cached_data.py  af6d011c7f57_add_u.py  d1b1a0ab03b2_add_user.py  d6fbadecf446_init.py  e295289fcb2c_del_author.py  f13213e29a08_add_user.py
src/auth/: routes.py  schemas.py  service.py
src/posts/: models.py  routes.py  schemas.py
